Avoid calling glGetString on OpenGL 3.0+

To prevent profiling and debugging tools from generating misleading
"errors", call glGetString only for ES and GL < 3.0.

Task-number: QTBUG-35173
Change-Id: I4fe3b048fff4cda948152e2ceeb1347f2b0e4ca5
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>